Rename PrimeDecomposition to IntegerFactorization. Refactor IntegerFactorization::solve. Replace IntegerFactorization::isPrime internal logic with a call to gmp_prob_prime().

--- a/php/composer.json
+++ b/php/composer.json
@@ -18,7 +18,8 @@
 		"issues": "https://github.com/tomzx/project-euler/issues"
 	},
 	"require": {
-		"php": ">=5.5.0"
+		"php": ">=5.5.0",
+		"ext-gmp": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4"
